fixing bio spacing

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ a{
   #bio{
     margin-left: 10%;
     margin-right: 10%;
-    max-width: 500px;
+    max-width: 600px;
   }
   .resume{
     padding-top: 25px;
